objects/Contract_Reference__c.object
<CustomObject>
    <description>Contract related to the corresponding renewal opportunity is displayed</description>
    <fields>
        <fullName>AMID2__c</fullName>
        <label>AMID2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMP_ID__c</fullName>
        <label>AMP ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract References</relationshipLabel>
        <relationshipName>Contract_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSSA_Number__c</fullName>
        <label>CSSA Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <label>Cancellation Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Desc__c</fullName>
        <label>Cancellation Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Relationship_Code__c</fullName>
        <label>Channel Relationship Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Relationship_Description__c</fullName>
        <label>Channel Relationship Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Admin_ID__c</fullName>
        <formula>Contract_Admin_Name__r.Legacy_Employee_Ref__c</formula>
        <label>Contract Admin ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Admin_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Admin Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract References</relationshipLabel>
        <relationshipName>Contract_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_date__c</fullName>
        <label>Contract End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Length_in_Months__c</fullName>
        <description>To Display Contract Length</description>
        <formula>(Contract_End_date__c  -  Contract_Start_Date__c)/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Length in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Accounts__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <label>Ship To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <label>Functional Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBC_Contract_Admin_ID__c</fullName>
        <label>GBC Contract Admin ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBC_Contract_Admin_Name__c</fullName>
        <label>GBC Contract Admin Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Contract_Nbr__c</fullName>
        <label>Group Contract Nbr</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiyear_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiyear Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiyear_PO_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiyear PO type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract References</relationshipLabel>
        <relationshipName>Contract_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_End_Date__c</fullName>
        <label>PO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Service_Partner_Id__c</fullName>
        <description>Created as requested</description>
        <label>Preferred Service Partner Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Service_Provider_ID__c</fullName>
        <description>Created as requested</description>
        <label>Preferred Service Provider ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepaid_Flag__c</fullName>
        <description>Created as per request</description>
        <label>Prepaid Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Accounts__r.World_Region1__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejection Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Action_Date__c</fullName>
        <label>Renewal Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Month_Year__c</fullName>
        <formula>TEXT(MONTH(Contract_End_date__c + 1))   &amp; &apos;/&apos;  &amp;  TEXT(YEAR(Contract_End_date__c + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Month Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Period__c</fullName>
        <formula>IF(Year(TODAY())=Year(Contract_End_date__c),  
 CASE(Renewal_Quarter__c, 
 &apos;Q1&apos;, 
 IF(Month(TODAY())=1, &apos;Future&apos;,  IF( (Month(TODAY())&gt;1 &amp;&amp; Month(TODAY())&lt;5), &apos;Current&apos;,  IF((Month(TODAY())&gt;4 &amp;&amp; Month(TODAY())&lt;8), &apos;Carryover&apos;, &apos;Backlog&apos;) ) ), 
 &apos;Q2&apos;, 
 IF(Month(TODAY())&lt;5, &apos;Future&apos;,  IF((Month(TODAY())&gt;4 &amp;&amp; Month(TODAY())&lt;8), &apos;Current&apos;,  IF((Month(TODAY())&gt;7 &amp;&amp; Month(TODAY())&lt;11), &apos;Carryover&apos;, &apos;Backlog&apos;) ) ) ,
 &apos;Q3&apos;,
IF(Month(TODAY())&lt;8, &apos;Future&apos;,  IF((Month(TODAY())&gt;7 &amp;&amp; Month(TODAY())&lt;11), &apos;Current&apos;, &apos;Carryover&apos;) ) ,
 &apos;Q4&apos;,
IF((Month(TODAY())&lt;11 &amp;&amp; Month(Contract_End_date__c) &lt;&gt; 1), &apos;Future&apos;, IF((Month(Contract_End_date__c) = 1 &amp;&amp; Month(TODAY())&lt;5), &apos;Carryover&apos;, IF((Month(Contract_End_date__c) = 1 &amp;&amp; Month(TODAY())&gt;4), &apos;Backlog&apos;, &apos;Current&apos;) ) ),
 &apos;&apos;) ,  
IF(Year(TODAY())-Year(Contract_End_date__c)=1,  
 CASE(Renewal_Quarter__c, 
 &apos;Q4&apos;,  
 IF( (Month(TODAY())=1&amp;&amp;Month(Contract_End_date__c)&gt;10), &apos;Current&apos;, IF( (Month(TODAY())&lt;5&amp;&amp;Month(Contract_End_date__c)&gt;10), &apos;Carryover&apos;, &apos;Backlog&apos;)) , 
 &apos;Backlog&apos;),  
IF(Year(TODAY())-Year(Contract_End_date__c)=-1,  IF((Month(TODAY())&gt;10&amp;&amp;Month(Contract_End_date__c)=1), &apos;Current&apos;, &apos;Future&apos;) , 
IF(Year(TODAY())-Year(Contract_End_date__c)&lt;1, &apos;Future&apos;, &apos;Backlog&apos;) ) ) )</formula>
        <label>Renewal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Quarter__c</fullName>
        <formula>IF(MONTH(Contract_End_date__c) &gt; 1 &amp;&amp; MONTH(Contract_End_date__c) &lt; 5, &apos;Q1&apos;, 
IF(MONTH(Contract_End_date__c) &gt; 4 &amp;&amp; MONTH(Contract_End_date__c) &lt; 8, &apos;Q2&apos;,
IF(MONTH(Contract_End_date__c) &gt; 9 &amp;&amp; MONTH(Contract_End_date__c) &lt; 11, &apos;Q3&apos;, &apos;Q4&apos;)))</formula>
        <label>Renewal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Status_Description__c</fullName>
        <label>Renewal Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResellerSAPId__c</fullName>
        <label>Reseller SAP Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Id__c</fullName>
        <description>Created as per request</description>
        <label>Reseller ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract References (Reseller Name)</relationshipLabel>
        <relationshipName>Contract_References2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAID__c</fullName>
        <label>SAID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_related_to_PSP_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as per request</description>
        <label>PSP Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract References (SFDC Account related to PSP Id)</relationshipLabel>
        <relationshipName>Contract_References3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_related_to_Reseller_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as per request</description>
        <label>Reseller Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract References (Account)</relationshipLabel>
        <relationshipName>Contract_References1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Doc_Nbr__c</fullName>
        <externalId>true</externalId>
        <label>Sales Doc Nbr</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Sales_Rep_ID__c</fullName>
        <label>Secondary Sales Rep ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Customer_ID__c</fullName>
        <label>Sold to Customer ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region_1__c</fullName>
        <formula>Accounts__r.WorldRegion_SubRegion1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region_2__c</fullName>
        <formula>Accounts__r.WorldRegion_SubRegion2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region_3__c</fullName>
        <formula>Accounts__r.WorldRegion_SubRegion3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Order_No__c</fullName>
        <label>Upfront Order No</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_status__c</fullName>
        <label>Document Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Status__c</fullName>
        <description>Created as per request</description>
        <label>Web Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZGRP__c</fullName>
        <label>ZGRP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_contract_value_formula__c</fullName>
        <formula>Total_Contract_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total contract value formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Reference</label>
    <listViews>
        <fullName>AMS_Contract_References</fullName>
        <columns>AMP_ID__c</columns>
        <columns>Group_Contract_Nbr__c</columns>
        <columns>NAME</columns>
        <columns>SAID__c</columns>
        <columns>Renewal_Status_Description__c</columns>
        <columns>Original_Opportunity__c</columns>
        <columns>Functional_Location__c</columns>
        <columns>Contract_Admin_Name__c</columns>
        <columns>Accounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>AMS Contract References</label>
        <language>en_US</language>
        <sharedTo>
            <group>CO_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APJ_Contract_References</fullName>
        <columns>AMP_ID__c</columns>
        <columns>Group_Contract_Nbr__c</columns>
        <columns>NAME</columns>
        <columns>SAID__c</columns>
        <columns>Renewal_Status_Description__c</columns>
        <columns>Original_Opportunity__c</columns>
        <columns>Functional_Location__c</columns>
        <columns>Contract_Admin_Name__c</columns>
        <columns>Accounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Asia Pacific</value>
        </filters>
        <label>APJ Contract References</label>
        <language>en_US</language>
        <sharedTo>
            <group>CO_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EMEA_Contract_References</fullName>
        <columns>AMP_ID__c</columns>
        <columns>Group_Contract_Nbr__c</columns>
        <columns>NAME</columns>
        <columns>SAID__c</columns>
        <columns>Renewal_Status_Description__c</columns>
        <columns>Original_Opportunity__c</columns>
        <columns>Functional_Location__c</columns>
        <columns>Contract_Admin_Name__c</columns>
        <columns>Accounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>EMEA Contract References</label>
        <language>en_US</language>
        <sharedTo>
            <group>CO_Public_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sales Document Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Grouping_Contracts_if_same_Currency_Code</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Original_Opportunity__c  &lt;&gt; null,TEXT(CurrencyIsoCode) &lt;&gt;  TEXT(Original_Opportunity__r.CurrencyIsoCode) , FALSE)</errorConditionFormula>
        <errorMessage>Cannot Associate Contract to a Renewal Opportunity with Different Currencies</errorMessage>
    </validationRules>
</CustomObject>